prowlarr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  template:
    spec:
      containers:
        - name: prowlarr
          image: ghcr.io/hotio/prowlarr:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
      volumes:
        - name: config
          hostPath:
            path: /opt/prowlarr/config
            type: Directory
        - name: downloads
          hostPath:
            path: /tank/media/downloads
            type: Directory
