prowlarr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9696
      name: web
